--- a/src/components/CityMiniature/CityMiniature.css
+++ b/src/components/CityMiniature/CityMiniature.css
@@ -12,6 +12,8 @@
   height: 100%;
   padding: 0px;
   margin: 0 auto 0 auto;
+  border: none;
+  border-right: 2px solid rgb(58, 58, 58);
   border-bottom: 2px solid black;
   border-radius: 2%;
 }
