--- a/src/pages/PlayCity/PlayCity.css
+++ b/src/pages/PlayCity/PlayCity.css
@@ -1,24 +1,20 @@
 .player-wrapper {
-  /* position: relative; */
-  /* Player ratio: 100 / (1280 / 720) */
-  /* padding-top: 56.25%; */
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
+  margin-top: 3px;
 }
 
 .react-player {
-  /* position: absolute;
-  top: 0;
-  left: 0; */
   min-width: 100%;
-  min-height: 20%;
-  z-index: 0;
+  min-height: 75vh;
 }
 
 .audio-controls {
-  margin-top: 2px;
+  max-height: 100px;
+  margin-top: 5px;
+  margin-bottom: 10vh;
   margin-left: 5%;
-  z-index: 1;
 }
 
 .playCity-icon {
@@ -30,6 +26,7 @@
   border: none;
   background: transparent;
   box-shadow: none;
+  margin-bottom: 10px;
 }
 
 .playCity-button-style:focus {
