--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,22 +1,31 @@
 .cityMiniature {
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 1600px;
-	border: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 1600px;
+  border: 0;
 }
 
 .loadMoreButton {
-	display: block;
-	margin-left: auto;
-	margin-right: 3vw;
-	border: none;
-	background-color: white;
+  display: block;
+  margin-left: auto;
+  margin-right: 3vw;
+  border: none;
+  background-color: white;
 }
 
 .postCityButton {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: white;
-	border: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  border: none;
+}
+
+.city-container {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: flex-start;
+  max-width: 1600px;
 }
