--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,9 +1,17 @@
+.city-container {
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	align-content: flex-start;
+	max-width: 1600px;
+}
+
 .cityMiniature {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: 1600px;
-  border: 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	max-width: 1600px;
+	border: 0;
 }
 
 .loadMoreButton {
@@ -14,29 +22,25 @@
 	background-color: rgb(52, 47, 58);
 }
 
-.loadMoreButton:hover,
-.loadMoreButton:active {
-	text-decoration-color: white;
-	color: white;
+.loadMoreButton:focus {
+	outline: none;
+}
+
+.loadMoreImage {
+	width: 20%;
+}
+
+.postCityDiv {
+	width: fit-content;
+	margin: 30px auto 0 auto;
 }
 
 .postCityButton {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
 	background-color: rgb(52, 47, 58);
 	color: rgb(201, 194, 206);
 	border: none;
-
-}
-
-.city-container {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: flex-start;
-  max-width: 1600px;
-
+	object-fit: contain;
 }
 
 .postCityButtonLink {
@@ -48,8 +52,4 @@
 	text-decoration-color: white;
 	color: white;
 	transform: scale(1.1);
-}
-
-.loadMoreImage {
-	width: 20%;
 }
