--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,55 +1,64 @@
+.linearGradient {
+	background-image: linear-gradient(
+		/* Original RGB Value bg color: rgb(52, 47, 58) */
+			hsla(267, 11%, 21%, 1),
+		hsla(267, 11%, 5%, 1)
+	);
+}
+
 .city-container {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: flex-start;
-  max-width: 1600px;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	align-content: flex-start;
+	max-width: 1600px;
+	margin-top: 50px;
 }
 
 .cityMiniature {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: 1600px;
-  border: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	max-width: 1600px;
+	border: 0;
 }
 
 .loadMoreButton {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: none;
-  background-color: rgb(52, 47, 58);
+	display: block;
+	margin: 20px auto 0 auto;
+	border: none;
+	background-color: transparent;
 }
 
 .loadMoreButton:focus {
-  outline: none;
+	outline: none;
 }
 
 .loadMoreImage {
-  width: 20%;
+	width: 20%;
 }
 
 .postCityDiv {
-  width: fit-content;
-  margin: 30px auto 0 auto;
+	width: fit-content;
+	margin: 30px auto 0 auto;
 }
 
 .postCityButton {
-  display: block;
-  background-color: rgb(52, 47, 58);
-  color: rgb(201, 194, 206);
-  border: none;
-  object-fit: contain;
+	display: block;
+	background-color: transparent;
+	border: none;
+	object-fit: contain;
 }
 
 .postCityButtonLink {
-  transition: transform 0.75s;
+	transition: transform 0.75s;
 }
 
 .postCityButtonLink:hover,
 .postCityButtonLink:active {
-  text-decoration-color: white;
-  color: white;
-  transform: scale(1.1);
+	text-decoration-color: white;
+	color: white;
+	transform: scale(1.1);
 }
