added active style on the navbar, and some small font color changes on login/signup pages

--- a/src/pages/SignUp/Signup.css
+++ b/src/pages/SignUp/Signup.css
@@ -3,7 +3,15 @@
   overflow: hidden;
 }
 
-.loginLinkStyle:hover {
+.emailText {
   color: rgb(201, 194, 206);
+}
+
+.loginLinkStyle {
+  color: rgb(201, 194, 206);
+}
+
+.loginLinkStyle:hover {
+  color: white;
   text-decoration: none;
 }
