--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,7 +2,11 @@
   min-height: 100vh;
 }
 
-.signupLinkStyle:hover {
+.signupLinkStyle {
   color: rgb(201, 194, 206);
+}
+
+.signupLinkStyle:hover {
+  color: white;
   text-decoration: none;
 }
