--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,12 +1,14 @@
-.fullHeight {
-  min-height: 100vh;
-}
-
 .signupLinkStyle {
-  color: rgb(201, 194, 206);
+	color: rgb(201, 194, 206);
 }
 
 .signupLinkStyle:hover {
-  color: white;
-  text-decoration: none;
+	color: white;
+	text-decoration: none;
+}
+
+.bgImage {
+	background-image: url("../SharedImg/VibeCheckBG.png");
+	background-repeat: no-repeat;
+	background-position: 50% 450px;
 }
