--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -52,6 +52,10 @@
 	object-fit: contain;
 }
 
+.postCityButton:focus {
+	outline: none;
+}
+
 .postCityButtonLink {
 	transition: transform 0.75s;
 }
